--- a/css/app.css
+++ b/css/app.css
@@ -20,3 +20,11 @@ h1 span {
   font-style: italic;
   margin-top: 10px;
 }
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
